--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<!--
+This site and idea was originally developed by the amazing Polar! Thank you Polar!
+-->
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
